# sort-analyzer-cpp

./: sort-analyzer-cpp.sln
sort-analyzer-cpp/: .gitignore  CMakeLists.txt  sort-analyzer-cpp.vcxproj  sort-analyzer-cpp.vcxproj.filters
sort-analyzer-cpp/data/: Tablica10.txt  data.txt  sort_analyzer.db  wyniki.txt
sort-analyzer-cpp/headers/: AlgorithmComparison.h  BubbleSort.h  ConsoleUtils.h  DatabaseManager.h  HeapSort.h  InsertionSort.h  MenuManager.h  MergeSort.h  QuickSort.h  SelectionSort.h  SortAlgorithm.h
sort-analyzer-cpp/src/: AlgorithmComparision.cpp  BubbleSort.cpp  ConsoleUtils.cpp  DatabaseManager.cpp  HeapSort.cpp  InsertionSort.cpp  Main.cpp  MenuManager.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp
sort-analyzer-cpp/tests/data/: smallArray.txt
